--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "nodemon ./bin/www"
   },
   "dependencies": {
+    "cookie": "^0.4.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
@@ -21,6 +22,7 @@
   "devDependencies": {
     "body-parser": "^1.19.0",
     "express-session": "^1.17.1",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "socket.io": "^2.3.0"
   }
 }
