--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "start": "nodemon ./bin/www"
   },
   "dependencies": {
+    "config": "^3.3.1",
     "cookie": "^0.4.1",
     "cookie-parser": "~1.4.4",
+    "dateformat": "^3.0.3",
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
@@ -17,7 +19,8 @@
     "mysql": "^2.18.1",
     "node-fetch": "^2.6.0",
     "nodemon": "^2.0.4",
-    "random": "^2.2.0"
+    "random": "^2.2.0",
+    "sha256": "^0.2.0"
   },
   "devDependencies": {
     "body-parser": "^1.19.0",
